# csv-validate-rs

./: .gitignore  INSTRUCT.md  README.md
crates/csv-validate/: Cargo.toml
crates/csv-validate/src/: config.rs  main.rs
crates/csv-validator-core/: Cargo.toml
crates/csv-validator-core/examples/: check.py  check.rs  check_combinator.py
crates/csv-validator-core/src/: engine.rs  executor.rs  issue.rs  lib.rs  main.rs  reader.rs  validator.rs  validator_spec.rs  validators.rs
crates/csv-validator-core/tests/: illegal_chars_validator_tests.rs  integration.rs
crates/csv-validators/: Cargo.toml  README.md  pyproject.toml
crates/csv-validators/examples/: check.py  test_validators.py
crates/csv-validators/src/: lib.rs
