[package]
name = "csv-validator-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
csv = "1.3.1"
nom = "8.0.0"
bytes = "1.10.1"
pyo3 = { version = "0.24.0", features = ["extension-module", "serde", "indexmap"], optional = true  }
thiserror = "2.0.12"
aho-corasick = "1.1.3"
crossbeam-channel = "0.5.14"
memmap2 = "0.9.5"
memchr = "2.7.4"
bytecount = "0.6.8"

[dev-dependencies]
pretty_assertions = "1"


[features]
python = ["pyo3"]
